# Fishualization

./: .gitignore  README.md
MATLAB/: CostFunc.m  FishSchool.m  FishSchool3.m  Food.m  mouseMove.m
OpenGL/: CMakeLists.txt  Camera.cpp  Camera.h  MatrixStack.cpp  MatrixStack.hpp  Objects.cpp  Objects.h  Shader.cpp  Shader.hpp  Texture.hpp  Utilities.cpp  Utilities.hpp  fragmentshader.glsl  main.cpp  particle.cpp  particle.h  particleSystem.cpp  particleSystem.h  vertexshader.glsl
OpenGL/assets/: SALMON.tga  fish.tga  ft2.tga  ground.tga  texture_DiffuseColor_Composite.tga
